--- a/doc/man/iop-tx.1
+++ b/doc/man/iop-tx.1
@@ -115,7 +115,7 @@ Set register NAME to given JSON\-STRING
 Copyright (C) 2009-2017 The Bitcoin Core developers
 
 Please contribute if you find IoP Core useful. Visit
-<https://iopcore.org> for further information about the software.
+<https://iop.cash> for further information about the software.
 The source code is available from <https://github.com/Internet-of-People/iop-hd>.
 
 This is experimental software.
