--- a/doc/man/iopd.1
+++ b/doc/man/iopd.1
@@ -528,7 +528,7 @@ Set the number of threads to service RPC calls (default: 4)
 Copyright (C) 2009-2017 The Bitcoin Core developers
 
 Please contribute if you find IoP Core useful. Visit
-<https://iopcore.org> for further information about the software.
+<https://iop.cash> for further information about the software.
 The source code is available from <https://github.com/Internet-of-People/iop-hd>.
 
 This is experimental software.
