[Wallet] use Sat/WU instead of (μ/m)BTC/kB
Weight Units should be used instead of bytes. Sat/WU produces
values between 0.01 - 100 if prices and fees stay within a few
orders of magnitude of todays. This makes them easier to reason
about for users.

--- a/doc/man/bitcoin-qt.1
+++ b/doc/man/bitcoin-qt.1
@@ -268,25 +268,25 @@ Set key pool size to <n> (default: 1000)
 .HP
 \fB\-fallbackfee=\fR<amt>
 .IP
-A fee rate (in BTC/kB) that will be used when fee estimation has
-insufficient data (default: 0.0002)
+A fee rate (in Sat/WU) that will be used when fee estimation has
+insufficient data (default: 5)
 .HP
 \fB\-discardfee=\fR<amt>
 .IP
-The fee rate (in BTC/kB) that indicates your tolerance for discarding
-change by adding it to the fee (default: 0.0001). Note: An output
+The fee rate (in Sat/WU) that indicates your tolerance for discarding
+change by adding it to the fee (default: 2.5. Note: An output
 is discarded if it is dust at this rate, but we will always
 discard up to the dust relay fee and a discard fee above that is
 limited by the fee estimate for the longest target
 .HP
 \fB\-mintxfee=\fR<amt>
 .IP
-Fees (in BTC/kB) smaller than this are considered zero fee for
-transaction creation (default: 0.00001)
+Fees (in Sat/WU) smaller than this are considered zero fee for
+transaction creation (default: 0.25)
 .HP
 \fB\-paytxfee=\fR<amt>
 .IP
-Fee (in BTC/kB) to add to transactions you send (default: 0.00)
+Fee (in Sat/WU) to add to transactions you send (default: 0.00)
 .HP
 \fB\-rescan\fR
 .IP
@@ -426,8 +426,8 @@ Enable transaction replacement in the memory pool (default: 1)
 .HP
 \fB\-minrelaytxfee=\fR<amt>
 .IP
-Fees (in BTC/kB) smaller than this are considered zero fee for relaying,
-mining and transaction creation (default: 0.00001)
+Fees (in Sat/WU) smaller than this are considered zero fee for relaying,
+mining and transaction creation (default: 0.25)
 .HP
 \fB\-whitelistrelay\fR
 .IP
@@ -452,8 +452,8 @@ blockmaxweight
 .HP
 \fB\-blockmintxfee=\fR<amt>
 .IP
-Set lowest fee rate (in BTC/kB) for transactions to be included in block
-creation. (default: 0.00001)
+Set lowest fee rate (in Sat/WU) for transactions to be included in block
+creation. (default: 0.25)
 .PP
 RPC server options:
 .HP
