--- a/doc/man/raven-qt.1
+++ b/doc/man/raven-qt.1
@@ -268,12 +268,12 @@ Set key pool size to <n> (default: 1000)
 .HP
 \fB\-fallbackfee=\fR<amt>
 .IP
-A fee rate (in BTC/kB) that will be used when fee estimation has
+A fee rate (in RVN/kB) that will be used when fee estimation has
 insufficient data (default: 0.0002)
 .HP
 \fB\-discardfee=\fR<amt>
 .IP
-The fee rate (in BTC/kB) that indicates your tolerance for discarding
+The fee rate (in RVN/kB) that indicates your tolerance for discarding
 change by adding it to the fee (default: 0.0001). Note: An output
 is discarded if it is dust at this rate, but we will always
 discard up to the dust relay fee and a discard fee above that is
@@ -281,12 +281,12 @@ limited by the fee estimate for the longest target
 .HP
 \fB\-mintxfee=\fR<amt>
 .IP
-Fees (in BTC/kB) smaller than this are considered zero fee for
+Fees (in RVN/kB) smaller than this are considered zero fee for
 transaction creation (default: 0.00001)
 .HP
 \fB\-paytxfee=\fR<amt>
 .IP
-Fee (in BTC/kB) to add to transactions you send (default: 0.00)
+Fee (in RVN/kB) to add to transactions you send (default: 0.00)
 .HP
 \fB\-rescan\fR
 .IP
@@ -386,7 +386,7 @@ Prepend debug output with timestamp (default: 1)
 .HP
 \fB\-maxtxfee=\fR<amt>
 .IP
-Maximum total fees (in BTC) to use in a single wallet transaction or raw
+Maximum total fees (in RVN) to use in a single wallet transaction or raw
 transaction; setting this too low may abort large transactions
 (default: 0.10)
 .HP
@@ -426,7 +426,7 @@ Enable transaction replacement in the memory pool (default: 1)
 .HP
 \fB\-minrelaytxfee=\fR<amt>
 .IP
-Fees (in BTC/kB) smaller than this are considered zero fee for relaying,
+Fees (in RVN/kB) smaller than this are considered zero fee for relaying,
 mining and transaction creation (default: 0.00001)
 .HP
 \fB\-whitelistrelay\fR
@@ -452,7 +452,7 @@ blockmaxweight
 .HP
 \fB\-blockmintxfee=\fR<amt>
 .IP
-Set lowest fee rate (in BTC/kB) for transactions to be included in block
+Set lowest fee rate (in RVN/kB) for transactions to be included in block
 creation. (default: 0.00001)
 .PP
 RPC server options:
