--- a/doc/man/raven-cli.1
+++ b/doc/man/raven-cli.1
@@ -89,7 +89,7 @@ filename in ravend directory, required if ravend/\-Qt runs
 with multiple wallets)
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-// Copyright (c) 2017 The Raven Core developers
+Copyright (c) 2017 The Raven Core developers
 
 Please contribute if you find Raven Core useful. Visit
 <https://ravencore.org> for further information about the software.
