--- a/doc/man/raven-qt.1
+++ b/doc/man/raven-qt.1
@@ -543,7 +543,7 @@ Show splash screen on startup (default: 1)
 Reset all settings changed in the GUI
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-// Copyright (c) 2017 The Raven Core developers
+Copyright (c) 2017 The Raven Core developers
 
 Please contribute if you find Raven Core useful. Visit
 <https://ravencore.org> for further information about the software.
