--- a/doc/man/raven-tx.1
+++ b/doc/man/raven-tx.1
@@ -113,7 +113,7 @@ set=NAME:JSON\-STRING
 Set register NAME to given JSON\-STRING
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-// Copyright (c) 2017 The Raven Core developers
+Copyright (c) 2017 The Raven Core developers
 
 Please contribute if you find Raven Core useful. Visit
 <https://ravencore.org> for further information about the software.
