--- a/doc/man/bitcoin-qt.1
+++ b/doc/man/bitcoin-qt.1
@@ -490,7 +490,7 @@ Password for JSON\-RPC connections
 .IP
 Username and hashed password for JSON\-RPC connections. The field
 <userpw> comes in the format: <USERNAME>:<SALT>$<HASH>. A
-canonical python script is included in share/rpcuser. The client
+canonical Python script is included in share/rpcuser. The client
 then connects normally using the
 rpcuser=<USERNAME>/rpcpassword=<PASSWORD> pair of arguments. This
 option can be specified multiple times
