--- a/doc/man/ravend.1
+++ b/doc/man/ravend.1
@@ -525,8 +525,8 @@ Copyright (C) 2009-2017 The Bitcoin Core developers
 Copyright (c) 2017 The Raven Core developers
 
 Please contribute if you find Raven Core useful. Visit
-<https://ravencore.org> for further information about the software.
-The source code is available from <https://github.com/raven/raven>.
+<https://ravencoin.org> for further information about the software.
+The source code is available from <https://github.com/RavenProject/Ravencoin>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
